# langgraph_project

./: .gitignore  approval_gui.py  conditional_workflow.py  diagram.py  document_analyzer.py  linear_workflow.py  main.py  note.py  note_taker.py  pyproject.toml  test_note_taking.py
content_crator_agent/: approval_gui.py  config.py  main.py  note_graph.py  section_graph.py
note_taker/: approval_gui.py  config.py  multiple.py  note_taker.py  test_note_taking.py
